# hft

./: .clang-format  .cursorrules  .gitignore  CMakeLists.txt  README.md  SharedPointer.cpp
include/: Concepts.hpp  MarketDataFeed.hpp  MatchingEngine.hpp  OrderBook.hpp  SharedPtr.hpp  Utils.hpp
scripts/: benchmark.sh  ci.sh  run.sh
src/: MarketDataFeed.cpp  MatchingEngine.cpp  OrderBook.cpp  main.cpp  sharedpointer.cpp
src/SharedPtr.cpp  /:  This wouldn't work
tests/: CMakeLists.txt  benchmark_main.cpp  test_main.cpp
